--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <head>
     <title>
 
@@ -8,41 +7,59 @@
 
 <body>
     <div id="content-wrapper">
-            <div id="world-pop-container" class="rcol">
-                <h3 id="test">World Population</h3>
-                <p>
-                    <span class="rolling-digit notransition">
-                        <img id="img1" class="imgs" src="images/strip.png" style="top: -308px;" width="36" height="484">
-                    </span>
-                    <span>,</span>
-                    <span class="rolling-digit">
-                        <img id="img2" class="imgs" src="images/strip.png" style="top: -264px;" width="36" height="484">
-                    </span>
-                    <span class="rolling-digit">
-                        <img id="img3" class="imgs" src="images/strip.png" style="top: -44px;" width="36" height="484"></span>
-                    <span class="rolling-digit">
-                        <img id="img4" class="imgs" src="images/strip.png" style="top: -44px;" width="36" height="484">
-                    </span>
-                    <span>,</span>
-                    <span class="rolling-digit">
-                        <img id="img5" class="imgs" src="images/strip.png" style="top: -88px;" width="36" height="484">
-                    </span>
-                    <span class="rolling-digit">
-                        <img id="img6" class="imgs" src="images/strip.png" style="top: -264px;" width="36" height="484"></span>
-                    <span class="rolling-digit">
-                        <img id="img7" class="imgs" src="images/strip.png" style="top: -44px;" width="36" height="484">
-                    </span>
-                    <span>,</span>
-                    <span class="rolling-digit">
-                        <img id="img8" class="imgs" src="images/strip.png" style="top: -396px;" width="36" height="484">
-                    </span>
-                    <span class="rolling-digit">
-                        <img id="img9" class="imgs" src="images/strip.png" style="top: 0px;" width="36" height="484"></span>
-                    <span class="rolling-digit">
-                        <img id="img10" class="imgs" src="images/strip.png" style="top: 0px;" width="36" height="484">
-                    </span>
-                </p>
-            </div>
+        <div id="world-pop-container" class="rcol">
+            <h3 id="test">World Population</h3>
+            <p>
+                <span class="rolling-digit notransition">
+                    <img id="img1" class="imgs" src="images/strip.png" style="top: -308px;" width="36" height="484">
+                </span>
+                <span>,</span>
+                <span class="rolling-digit">
+                    <img id="img2" class="imgs" src="images/strip.png" style="top: -264px;" width="36" height="484">
+                </span>
+                <span class="rolling-digit">
+                    <img id="img3" class="imgs" src="images/strip.png" style="top: -44px;" width="36"
+                        height="484"></span>
+                <span class="rolling-digit">
+                    <img id="img4" class="imgs" src="images/strip.png" style="top: -44px;" width="36" height="484">
+                </span>
+                <span>,</span>
+                <span class="rolling-digit">
+                    <img id="img5" class="imgs" src="images/strip.png" style="top: -88px;" width="36" height="484">
+                </span>
+                <span class="rolling-digit">
+                    <img id="img6" class="imgs" src="images/strip.png" style="top: -264px;" width="36"
+                        height="484"></span>
+                <span class="rolling-digit">
+                    <img id="img7" class="imgs" src="images/strip.png" style="top: -44px;" width="36" height="484">
+                </span>
+                <span>,</span>
+                <span class="rolling-digit">
+                    <img id="img8" class="imgs" src="images/strip.png" style="top: -396px;" width="36" height="484">
+                </span>
+                <span class="rolling-digit">
+                    <img id="img9" class="imgs" src="images/strip.png" style="top: 0px;" width="36" height="484"></span>
+                <span class="rolling-digit">
+                    <img id="img10" class="imgs" src="images/strip.png" style="top: 0px;" width="36" height="484">
+                </span>
+            </p>
+            <table>
+                <th>
+                    <p style="color: #75bce2;">Births Today: </p>
+                </th>
+                <th>
+                    <p class="dBP" style="color: white;">0</p>
+                </th>
+            </table>
+            <table>
+                <th>
+                    <p style="color: #1388c7;">Deaths Today: </p>
+                </th>
+                <th>
+                    <p class="dBP" style="color: red;">0</p>
+                </th>
+            </table>
+        </div>
     </div>
     <script src="jscript.js"></script>
 </body>
